--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "morgan": "^1.10.0",
     "nodemailer": "^6.7.4",
     "nodemon": "^2.0.15",
+    "slugify": "^1.6.5",
     "socket.io": "^4.4.1"
   },
   "devDependencies": {
